# src/main/java/pl/akademiaspecjalistowit/ecommerce/cart/entity/CartEntity.java
@@ -8,6 +8,7 @@ import lombok.NoArgsConstructor;
 import pl.akademiaspecjalistowit.ecommerce.client.entity.ClientEntity;
 import pl.akademiaspecjalistowit.ecommerce.item.entity.ItemEntity;
 
+import java.util.HashSet;
 import java.util.Set;
 import java.util.UUID;
 
@@ -18,9 +19,9 @@ import java.util.UUID;
 @Table(name = "cart")
 public class CartEntity {
 
-    public CartEntity(UUID technicalId, Set<ItemEntity> itemId, Long numberOfProducts, ClientEntity clientId, String promoCode) {
+    public CartEntity(UUID technicalId, ItemEntity itemId, Long numberOfProducts, ClientEntity clientId, String promoCode) {
         this.technicalId = technicalId;
-        this.itemId = itemId;
+        this.items = itemId;
         this.numberOfProducts = numberOfProducts;
         this.clientId = clientId;
         this.promoCode = promoCode;
@@ -33,10 +34,9 @@ public class CartEntity {
     @Column(name = "technical_id")
     private UUID technicalId;
 
-    @OneToMany
-    @JoinColumn(name = "id")
-    @Column(name = "item_id")
-    private Set<ItemEntity> itemId;
+    @ManyToOne
+    @JoinColumn(name = "item_id")
+    private ItemEntity items;
 
     @Column(name = "number_of_products")
     private Long numberOfProducts;
