# src/main/java/pl/akademiaspecjalistowit/ecommerce/order/entity/OrderEntity.java
@@ -9,7 +9,6 @@ import pl.akademiaspecjalistowit.ecommerce.client.entity.ClientEntity;
 import pl.akademiaspecjalistowit.ecommerce.item.entity.ItemEntity;
 
 import java.util.Date;
-import java.util.Set;
 import java.util.UUID;
 
 @Entity
@@ -17,35 +16,33 @@ import java.util.UUID;
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
 @AllArgsConstructor
 @Table(name = "client_order")
-public class ClientOrderEntity {
+public class OrderEntity {
+
+    public OrderEntity(OrderDetailsEntity orderDetailsEntity, UUID technicalId, ItemEntity itemId, Long totalAmount, ClientEntity clientId) {
+        this.orderDetailsEntity = orderDetailsEntity;
+        this.technicalId = technicalId;
+        this.itemId = itemId;
+        this.totalAmount = totalAmount;
+        this.clientId = clientId;
+    }
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
+    @ManyToOne(cascade = CascadeType.ALL)
+    @JoinColumn(name = "order_details_id")
+    private OrderDetailsEntity orderDetailsEntity;
+
     @Column(name = "technical_id")
     private UUID technicalId;
 
-    @OneToMany
-    @JoinColumn(name = "id")
-    @Column(name = "item_id")
-    private Set<ItemEntity> itemId;
+    @ManyToOne
+    @JoinColumn(name = "item_id")
+    private ItemEntity itemId;
 
     @Column(name = "total_amount")
     private Long totalAmount;
-
-    private String currency;
-
-    @Column(name = "order_date_time")
-    private Date orderDateTime;
-
-    @Column(name = "delivery_date_time")
-    private Date deliveryDateTime;
-
-    @Column(name = "shipping_method")
-    private String shippingMethod;
-
-    private String status;
 
     @OneToOne
     @JoinColumn(name = "client_id")
